--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,10 @@ Version: 0.1.0
 Author: Mislav Sagovac
 Maintainer: Mislav Sagovac <mislav.sagovac@contentio.biz>
 Description: Utils functions I often use in my quant finance analysis.
-License: MIT
+License: GPL-3
 Imports:
-  AzureStor
+  data.table,
+  checkmate
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
