--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Description: Utils functions I often use in my quant finance analysis.
 License: GPL-3
 Imports:
   data.table,
-  checkmate
+  checkmate,
+  xts
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
