--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ License: GPL-3
 Imports:
   data.table,
   checkmate,
-  xts
+  xts,
+  PerformanceAnalytics
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
