--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,6 @@ export(qc_daily)
 import(PerformanceAnalytics)
 import(checkmate)
 import(data.table)
-import(xts)
 importFrom(data.table,.N)
 importFrom(stats,na.omit)
+importFrom(xts,as.xts)
