--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,10 @@ Imports:
   data.table,
   checkmate,
   xts,
-  PerformanceAnalytics
+  PerformanceAnalytics,
+  highfrequency,
+  lubridate,
+  arrow
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
