--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,15 @@ export(dukascopy_quotes)
 export(finam_ohlcv)
 export(portfolio_stats)
 export(qc_daily)
+export(qc_hour)
+export(set_options)
 import(PerformanceAnalytics)
 import(checkmate)
 import(data.table)
 import(highfrequency)
 importFrom(arrow,read_parquet)
 importFrom(data.table,.N)
+importFrom(lubridate,force_tz)
 importFrom(lubridate,with_tz)
 importFrom(stats,na.omit)
 importFrom(xts,as.xts)
