--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,14 @@ import(PerformanceAnalytics)
 import(checkmate)
 import(data.table)
 import(highfrequency)
+importFrom(arrow,open_dataset)
 importFrom(arrow,read_parquet)
 importFrom(data.table,.N)
+importFrom(dplyr,all_of)
+importFrom(dplyr,collect)
+importFrom(dplyr,filter)
+importFrom(dplyr,rename_with)
+importFrom(dplyr,select)
 importFrom(lubridate,force_tz)
 importFrom(lubridate,with_tz)
 importFrom(stats,na.omit)
