--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Imports:
   PerformanceAnalytics,
   highfrequency,
   lubridate,
-  arrow
+  arrow,
+  dplyr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
