--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,3 +27,4 @@ importFrom(lubridate,force_tz)
 importFrom(lubridate,with_tz)
 importFrom(stats,na.omit)
 importFrom(xts,as.xts)
+useDynLib(finutils)
