--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(PerformanceAnalytics)
 import(checkmate)
 import(data.table)
 import(highfrequency)
+import(httr)
 importFrom(arrow,open_dataset)
 importFrom(arrow,read_parquet)
 importFrom(data.table,.N)
