--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(opt_threshold)
 export(opt_with_sma_threshold)
 export(portfolio_stats)
 export(qc_daily)
+export(qc_daily_parquet)
 export(qc_hour)
 export(set_options)
 export(wfo_combined)
