--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(qc_hour)
 export(set_options)
 export(wfo_combined)
 import(PerformanceAnalytics)
+import(Rcpp)
 import(checkmate)
 import(data.table)
 import(highfrequency)
