--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(portfolio_stats)
 export(qc_daily)
 export(qc_daily_parquet)
 export(qc_hour)
+export(qc_hour_parquet)
 export(set_options)
 export(wfo_combined)
 import(PerformanceAnalytics)
