Add crypto data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(backtest_threshold)
 export(calculate_sma)
 export(coarse)
+export(crypto)
 export(dukascopy_quotes)
 export(finam_ohlcv)
 export(opt_threshold)
@@ -21,6 +22,7 @@ import(data.table)
 import(highfrequency)
 import(httr)
 importFrom(arrow,open_dataset)
+importFrom(arrow,read_feather)
 importFrom(arrow,read_parquet)
 importFrom(data.table,.N)
 importFrom(dplyr,all_of)
